# brainPy-wendling

./: ENVIRONMENT_SPECIFICATION.md  INDEX.md  LICENSE  Makefile  README.md  Wendling_BrainPy_forward_SPEC_TODO.md  full_guide.md  pyproject.toml  requirements.txt  requirements_brainpy311.txt
.claude/: settings.local.json
FC_test/: FC_debug_steps.ipynb  README.md  brainpy_fc_neurolib_fine.py  brainpy_fc_sweep.py
configs/: optimize_default.yaml  sim_default.yaml
core_wendling/: README.md  __init__.py  config.yaml  dataset.py  features.py  plot_basic.py  plots.py  run_forward.py  sanity_check.py  stim.py  wendling_bp.py  wendling_param_sets.py
core_wendling/modeling/: predict.py  train.py
docs/: API_MAP.md  TREE.md  WENDLING_Subnetwork_WholeBrain_SPEC_TODO_v0.3.md  environment.md  guide.md  mkdocs.yml
docs/docs/: index.md
neurolib_wendling/: STANDARD_PARAMETERS.py  timeIntegration.py
notebooks/brainPy_practice/: EI_balance.ipynb  OOP_brainPy.ipynb  mvp_wendling.ipynb
notebooks/exploration/: EI_balance.ipynb  decision_making_neuron.ipynb  mvp_wendling.ipynb  wendling_network_examples.ipynb
results/opt_test_20260122_180645/: history.json  summary.json  target_psd.npz
results/random_opt_20260120_233404/: history.json  summary.json  target_psd.npz  true_params.json
scripts/: __init__.py  demo_hcp_fit_fc.py  demo_hcp_optimize.py  estimate_runtime.py  run_optimize.py  run_simulate.py  run_six_types.py
src/wendling_sim/: __init__.py  api.py
tests/: __init__.py  test_optimization.py  test_optimization_random.py
tools/: gen_docs.py
(+38 files in other folders)
