[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "core_wendling"
version = "0.0.1"
description = "A brainPy-driven wendling model"
authors = [
  { name = "Han-Jen Chang" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["core_wendling"]
include = ["pyproject.toml", "core_wendling/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["core_wendling"]
force-sort-within-sections = true

